# placian-svn

trunk/: AUTHORS  Makefile.am  Makefile.in  README  config.h.in  configure  configure.in
trunk/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
trunk/libplacian/: Makefile.am  Makefile.in  discrete_borel.cpp  discrete_borel.h  discrete_model.cpp  discrete_model.h  fraction.cpp  fraction.h  iprobe.cpp  iprobe.h  libplacian.h  model.cpp  model.h  poly.cpp  poly.h
trunk/src/: Makefile.am  Makefile.in  gplacian-test.cpp  gplacian.cpp  gplacian.h  libplacian-impl.h  main.cpp  placian.cpp  placian.h
