AC_INIT([placian],[0.1.0])
AM_INIT_AUTOMAKE([0.1.0])
AM_CONFIG_HEADER(config.h)

AC_LANG([C])
AC_LANG([C++])

AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_CHECK_HEADERS(getopt.h,,AC_MSG_ERROR(getopt.h header missing))

PKG_CHECK_MODULES([GTK], [gtk+-2.0 >= 2.8.0])
PKG_CHECK_MODULES([CAIRO], [cairo])

dnl LIBS="$LIBS_SAVE"
dnl CXXFLAGS="$CXXFLAGS_SAVE"

AC_CONFIG_FILES([
	Makefile 
	src/Makefile 
	libplacian/Makefile
])

AC_OUTPUT
